# snn-autoresearch

./: LICENSE  README.md  loop.py  prepare.py  program.md  pyproject.toml  train.py
snn_autoresearch/: __init__.py  candidate.py  evaluate.py  llm.py  prompts.py  spike.py  verify.py
snn_autoresearch/models/: __init__.py  recurrent.py  resnet.py  vgg.py
