[project]
name = "snn-autoresearch"
version = "0.1.0"
description = "LLM-driven discovery of surrogate gradient functions for spiking neural networks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "h5py>=3.8.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
